and now the server will serve you images. IMAGINE THAT

--- a/server.config
+++ b/server.config
@@ -1,4 +1,4 @@
-rootdir=C:\Users\Tim\www\
-logfile=/home/mccloud/log/log.txt
-portnumber=6666
+rootdir=/var/www
+logfile=/home/thor/log/log.txt
+portnumber=8080
 
