ready to present tomorrow

--- a/server.config
+++ b/server.config
@@ -1,4 +1,4 @@
-rootdir=/var/www
-logfile=/home/mccloud/log/log.txt
-portnumber=8080
+rootdir /var/www
+logfile /Users/tim/log.txt
+portnumber 8080
 
